<resources>
    <string name="app_name">우리집 칭찬톡</string>
</resources>
